Fixing alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -7,7 +7,7 @@ header{
 .layer{
     background-color: rgba(46, 45, 32, 0.5);
     position: absolute;
-    top: 64px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
@@ -15,11 +15,7 @@ header{
 }
 .header-text{
     z-index: 4;
-}
-@media screen and (max-width:800px){
-    header{
-        min-height:400px;
-    }
+    margin-top: 30vh;
 }
     .section{
         padding-top: 4vw;
